[package]
name = "proxy"
version = "0.1.0"
authors = ["Osh <osh.pro@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
dns-lookup = "1.0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
